# YaLoader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_RU.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
docs/: DEVELOPMENT.md
scripts/: bump_version.py  check_git_history.py  check_release_ready.py  check_secrets.py  make_bundle.py  package_release.py  probe_vk_audio.py
specs/: yaloader.spec
tests/: test_app_header.py  test_app_info.py  test_app_self_updater.py  test_app_update_service.py  test_archive_extraction.py  test_browser_cookies_controller.py  test_bump_version.py  test_check_git_history.py  test_check_release_ready.py  test_check_secrets.py  test_config_paths.py  test_cookies_file_service.py  test_deno_installer.py  test_download_controller_active_queueing.py  test_download_controller_cancel.py  test_download_controller_preparation.py  test_download_history_service.py  test_download_progress_playlist.py  test_download_queue_context_menu_rules.py  test_download_queue_empty_hint.py  test_download_queue_metadata.py  test_download_queue_panel_tooltips.py  test_download_queue_row_cell_text.py  test_download_queue_service.py  test_download_queue_shortcuts.py  test_download_request.py  test_download_router.py  test_environment_check_service.py  test_environment_controller.py  test_environment_panel_prepare_button.py  test_executable_version_resolver.py  test_ffmpeg_installer.py  test_github_app_update_checker.py  test_history_controller.py  test_history_controller_playlist.py  test_history_formatting.py  (+51 more)
(+168 files in other folders)
